# tetrane-oss

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  DEPENDENCIES_DEV.sh  README.md
dependencies/dev/: common.pkglist
